Fix tag gaps

--- a/frontend/components/css/layout.module.css
+++ b/frontend/components/css/layout.module.css
@@ -14,11 +14,6 @@
     z-index: -10;
 }
 
-/* html{
-    min-height: 100%;
-    background-image: ;
-} */
-
 .header {
     grid-area: header; 
     text-align: center;
